main.css
/* ... */
.btn-img {
	pointer-events: none;

	width: var(--gag-button-image-size);
	height: var(--gag-button-image-size);

	background-image: var(--gag-sheet);
	background-size: calc(var(--gag-sheet-size) * var(--gag-button-image-size) / var(--gag-sprite-size));
	filter: drop-shadow(2px 2px 2px rgba(0 0 0 / 40%));
}

.gag-button:hover .btn-img {
	filter: drop-shadow(2px 2px 2px rgba(0 0 0 / 40%)) brightness(125%);
}

.gag-button:active .btn-img {
	filter: drop-shadow(2px 2px 2px rgba(0 0 0 / 40%)) brightness(75%);
}

.disabled .btn-img {
	filter: drop-shadow(2px 2px 2px rgba(0 0 0 / 40%)) grayscale(25%) opacity(75%);
}

/* #endregion Gag button */

/* #endregion Gag panel */

/* #region About page */

.modal {
	position: fixed;
	top: 0px;
	left: 0px;
	right: 0;
	bottom: 0;
	padding: 25px;

	/* flex */
	display: none;
	align-items: center;
	justify-content: center;
	overflow: auto;
	background: rgba(0 0 0 / 40%);
	cursor: pointer;
}

.modal-content {
	box-sizing: border-box;
	width: 575px;
	max-height: 100%;
	min-height: 250px;
	margin: auto;
	padding: 16px;
	border-radius: 16px;
	box-shadow: rgba(0 0 0 / 30%) 4px 4px 16px;

	display: flex;
	flex-direction: column;
	background: white;
	cursor: auto;
}

.modal.show {
	animation: anim-fade-in 0.20s linear;
}

.modal.show .modal-content {
	animation: anim-scale-in 0.25s cubic-bezier(.8, .1, .3, 1.35);
}

.modal.hide {
	opacity: 0;
	animation: anim-fade-out 0.20s linear;
}

.modal.hide .modal-content {
	animation: anim-scale-out 0.25s cubic-bezier(.8, .1, .3, 1.35);
}

@keyframes anim-fade-in {
	from {
		opacity: 0
	}

	to {
		opacity: 1
	}
}

@keyframes anim-scale-in {
	from {
		scale: 0
	}

	to {
		scale: 1
	}
}

@keyframes anim-fade-out {
	from {
		opacity: 1
	}

	to {
		opacity: 0
	}
}

@keyframes anim-scale-out {
	from {
		scale: 1
	}

	to {
		scale: 0
	}
}

.about-header {
	display: flex;
	justify-content: space-between;
}

.about-title-container {
	margin: 12px;
	display: flex;
	flex-direction: column;
	gap: 4px;
}

.about-title {
	font-family: var(--font-minnie);
	font-size: clamp(18px, 4vw, 24px);
}

.about-subtitle {
	display: flex;
	justify-content: space-between;
}

.about-close {
	--button-color: white;
	--accent-color: dimgray;

	touch-action: manipulation;
	cursor: pointer;
	padding: 5px;
	line-height: 0;
	border: none;
	border-radius: 30%;
	background-color: var(--button-color);
	width: fit-content;
	height: fit-content;
}

.about-close:hover {
	filter: brightness(90%);
}

.about-close:active {
	filter: brightness(75%);
}

.about-close-icon {
	width: 26px;
	height: 26px;
	stroke-width: 3;
	stroke-linecap: round;
	stroke-linejoin: round;
	stroke: var(--accent-color);
	fill: none;
	filter: drop-shadow(2px 2px 1px rgba(0 0 0 / 10%));

	pointer-events: none;
}

.modal-content hr {
	width: 100%;
	color: white;
}

.about-content {
	display: flex;
	flex-direction: column;
	gap: 12px;
	overflow: auto;
	scrollbar-width: thin;
	scrollbar-gutter: stable;
	padding: 6px;
}

.about-summary {
	display: flex;
	flex-direction: column;
	gap: 8px;
}

.about-section {
	border-radius: 8px;
	padding: 16px;
	background: rgb(95%, 95%, 95%);
	box-shadow: 0 0 10px rgba(0 0 0 / 15%) inset;
}

.about-section-header {
	font-family: var(--font-minnie);
	font-size: 18px;
}

.options-grid {
	margin: auto;
	display: grid;
	grid-template-columns: 1fr auto;
	row-gap: 8px;
	max-width: 350px;
	align-items: center;
}

.option-label {
	padding-right: 16px;
}

.input-label[for=volume-slider] {
	margin: auto;
	display: block;
	width: fit-content;
}

#volume-slider {
	display: block;
	margin: auto;
	margin-bottom: 12px;
	width: 90%;
	max-width: 250px;
}

.credits-grid {
	margin: auto;
	display: grid;
	grid-template-columns: 1fr 1fr;
	row-gap: 8px;
	column-gap: 16px;
	max-width: 350px;
	align-items: center;
}

.credits-link {
	text-align: right;
	justify-self: right;
}

.github-link {
	display: inline-flex;
	gap: 4px;
	width: fit-content;
}

.github-link svg {
	width: 1.25em;
	height: 1.25em;
	fill: none;
	stroke-width: 2;
	stroke-linecap: round;
	stroke-linejoin: round;
	stroke: black;
}

/* #endregion About page */

/* #region Tooltip */

.tooltip {
	--tooltip-color: rgba(0 0 0 / 75%);
	--tooltip-text-color: white;
	--tooltip-arrow-size: 6px;

	font-family: var(--font-impress);
	font-size: 16px;

	position: absolute;
	pointer-events: none;
	top: 0;
	left: 0;
	opacity: 0;
	transition: 150ms opacity;
	will-change: transform;
}

.tooltip-body {
	width: max-content;
	text-align: center;
	padding: 6px 12px;
	border-radius: 6px;
	color: var(--tooltip-text-color);
	background-color: var(--tooltip-color);
}

.tooltip-arrow::before {
	position: absolute;
	border: var(--tooltip-arrow-size) solid transparent;
	content: "";
}

.tooltip-arrow-top::before {
	border-top-color: var(--tooltip-color);
	left: 50%;
	transform: translateX(-50%);
}

.tooltip-arrow-bottom::before {
	border-bottom-color: var(--tooltip-color);
	top: calc(var(--tooltip-arrow-size) * -2);
	left: 50%;
	transform: translateX(-50%);
}

.tooltip-arrow-left::before {
	border-left-color: var(--tooltip-color);
	top: 50%;
	right: calc(var(--tooltip-arrow-size) * -2);
	transform: translateY(-50%);
}

.tooltip-arrow-right::before {
	border-right-color: var(--tooltip-color);
	top: 50%;
	left: calc(var(--tooltip-arrow-size) * -2);
	transform: translateY(-50%);
}

/* #endregion Tooltip */

.checkbox {
	position: relative;
	width: fit-content;
	height: fit-content;
	line-height: 0;
	border: none;
	padding: 3px;
	background-color: color-mix(in srgb, var(--color), black 50%);

	border-radius: 20%;
	box-shadow: 2px 2px 4px rgba(0 0 0 / 40%);

	touch-action: manipulation;
	cursor: pointer;
}

.checkbox:hover {
	background-color: color-mix(in srgb, var(--color), black 30%);
}

.checkbox:active {
	background-color: color-mix(in srgb, var(--color), black 60%);
}
/* ... */

